Fix login error jumping bug

--- a/src/css/_login.scss
+++ b/src/css/_login.scss
@@ -9,6 +9,10 @@
   @include heightWidth(50%, 50%);
 }
 
+.login-alerts {
+  visibility: hidden;
+}
+
 .login-form {
   justify-content: space-around;
   display: flex;
